# slim2UPnP

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: AacDecoder.cpp  AacDecoder.h  AudioHttpServer.cpp  AudioHttpServer.h  Config.h  Decoder.cpp  Decoder.h  DsdProcessor.cpp  DsdProcessor.h  DsdStreamReader.cpp  DsdStreamReader.h  FfmpegDecoder.cpp  FfmpegDecoder.h  FlacDecoder.cpp  FlacDecoder.h  HttpStreamClient.cpp  HttpStreamClient.h  LogLevel.h  Mp3Decoder.cpp  Mp3Decoder.h  OggDecoder.cpp  OggDecoder.h  PcmDecoder.cpp  PcmDecoder.h  SlimprotoClient.cpp  SlimprotoClient.h  SlimprotoMessages.h  UPnPController.cpp  UPnPController.h  main.cpp
webui/: diretta_webui.py
webui/profiles/: slim2upnp.json
webui/static/: style.css
webui/templates/: index.html
